
2002-07-23-B

	* Additions:
	    - test for increment.

	* Fixes:
	    - get cloning right.
	    - use Test::Harness instead of shell to glob tests

	* Test-failures:
	    - with the right version of IMCC, all compiler tests pass!
	    - (parser tests disabled waiting for the error-message patch
	      to stabilize)

2002-07-24

	* Additions:
	    - parser error messages (John Kingsley)
	    - more parser tests (Kingsley) NOTE: these will generate
	      "uninitialized value" warnings, but they are harmless.

2002-07-25

	* Additions:
	    - "clean" and "distclean" Makefile targets (Leopold Toetsch).
	    - test-* files from different test don't clobber each other
	      (Toetsch).

2002-07-27

	* Additions:
	    - new driver program, "perl6" (Leopold Toetsch)
	    - mops.p6 performance test (Toetsch) (depressing)

	* Fixes:
	    - grammar uninitialized value warnings (John Kingsley)

2002-07-28

	* Additions:
	    - simple given/when cases.
	    - labels, loop control (e.g. "next")
	    - goto (considered harmful).

	    Note that this control flow is _not_ the "control flow
	    exceptions" mentioned in Apocalypse 4, but more standard
	    control flow with jumps.  As such, it doesn't play nicely with
	    exceptions.  If you jump out of a block with a CATCH clause,
	    you will lose somewhere down the road.

	* Fixes:
	    - underscores in numbers.
	    - block in sub resetting sub parameter list
	    - inplace operators (e.g. +=)
	    - bug in time0

	* Test-failures:
	    - 8.3 (Exceptions) -- stack is messed up.  Probably a P6C bug,
	      since the exception stuff is a bit fragile still.

2002-08-01

	* Additions:
	    - line numbers (Leo Toetsch)

	* Fixes:
	    - driver cleanup (Toetsch)

2002-08-04

	* Additions:
	    - minor test additions (Leo Toetsch)

2002-08-05

	* Fixes:
	    - update exception-handling code to work w/ new subs
	    - update anonymous subs, too
	
2002-08-07

	* Fixes:
	    - clean up bitrot in parser tests (Leo Toetsch)